# laba1

./: laba1_AiPPS.docx
binar/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AiPPS.vcxproj  AiPPS.vcxproj.filters  CMakeCache.txt  Laba_1.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  laba_1.vcxproj  vldlib.vcxproj  vldlib.vcxproj.filters
source/: CMakeLists.txt  Program.cpp
